# wolrus

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml
src/: cli.rs  lib.rs  main.rs
