[package]
name = "wolrus"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", optional = true, features = ["derive"] }
macaddr = "1.0.1"

[features]
cli = ["dep:clap"]

[[bin]]
name = "wolrus"
required-features = ["cli"]

[lints.clippy]
pedantic = "warn"

[profile.release]
strip = true
lto = true
codegen-units = 1
